@@ -106,7 +106,7 @@ extern  "C" {
 
 /* Misc. functions */
   NFC_EXPORT void iso14443a_crc (byte_t * pbtData, size_t szLen, byte_t * pbtCrc);
-  NFC_EXPORT void append_iso14443a_crc (byte_t * pbtData, size_t szLen);
+  NFC_EXPORT void iso14443a_crc_append (byte_t * pbtData, size_t szLen);
   NFC_EXPORT byte_t * iso14443a_locate_historical_bytes (byte_t * pbtAts, size_t szAts, size_t * pszTk);
   NFC_EXPORT const char *nfc_version (void);
 
